# semipara-sieve

./: .gitignore  README.md  agent.md  batched_qq_convergence.py  diagnostic_chisq_test.py  diagnostic_chisq_test_sequence.py  k_sensitivity_chisq.py  make_final_visual_set.py  mc_sieve_el.executed.ipynb  mc_sieve_el.ipynb  mc_sieve_el.kernelcheck.ipynb  mc_sieve_el.py  plot_qq_convergence.py  proof verify.md  pyproject.toml
notebooks/: mc_sieve_el.executed.ipynb  mc_sieve_el.ipynb
pseel/: __init__.py
result/: batched_qq_convergence_summary_20260621_031456.csv  batched_qq_convergence_summary_20260621_033845.csv  k_sensitivity_chisq_summary_20260621_032021.csv  k_sensitivity_chisq_summary_20260621_032459.csv  k_sensitivity_chisq_summary_20260621_034435.csv  k_sensitivity_chisq_summary_20260621_034707.csv  k_sensitivity_chisq_summary_20260621_035953.csv  k_sensitivity_chisq_summary_20260621_040023.csv  k_sensitivity_chisq_summary_20260621_040052.csv  smoke_k_sensitivity.csv  smoke_k_smoothness.csv  smoke_rough_k.csv
scripts/: break_adaptive_results.py  empirical_goyal_welch.py  make_figures.py  make_tables.py  theory_diagnostics.py  workbook_break_mc.py
tests/: conftest.py  test_breaks.py  test_dgp_shapes.py  test_el_solver.py  test_goyal_welch_pipeline.py  test_method_identities.py  test_reproducibility.py  test_residualize.py  test_theory_diagnostics.py  test_workbook_faithful_breaks.py  test_workbook_mc.py
writing_samples/: 202609_analysis.tex  brainstorming.aux  brainstorming.fdb_latexmk  brainstorming.fls  brainstorming.tex  brainstorming_v2.0_AR1(2)(1) (1).aux  (+30 more)
(+110 files in other folders)
